# ogle

libdvdread/: .cvsignore  AUTHORS  Makefile.am  NEWS  README  RELEASE_HOWTO  TODO  acinclude.m4  bootstrap  configure.in  libdvdread.spec
libdvdread/dvdread/: .cvsignore  Makefile.am  bswap.h  cmd_print.c  cmd_print.h  dvd_input.c  dvd_input.h  dvd_reader.c  dvd_reader.h  dvd_udf.c  dvd_udf.h  dvdcss.h  dvdread_internal.h  ifo_print.c  ifo_print.h  ifo_read.c  ifo_read.h  ifo_types.h  nav_print.c  nav_print.h  nav_read.c  nav_read.h  nav_types.h
libdvdread/src/: .cvsignore  Makefile.am  disc_id.c  filestat.c  ifo_dump.c  play_title.c  title_info.c
ogle/: .cvsignore  AUTHORS  Autogen_problems  INCOMPATIBILITIES  INSTALL  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  autogen.sh  configure.in  dvdp  ogle-alsa.spec  ogle.spec  ogle_conf.dtd  oglerc  oglerc.in  release_howto
ogle/ac3/: .cvsignore  Makefile  Makefile.am  Makefile.in  a52_decoder.c  ac3dec_wrap.c  audio_config.c  audio_config.h  audio_out.c  audio_play.c  audio_types.c  audio_types.h  conversion.c  decode.c  decode.h  decode_a52.c  decode_dts.c  decode_lpcm.c  decode_mpeg.c  decode_private.h  parse_config.c  parse_config.h
ogle/common/: Makefile.am  dvdcontrol.c  ip_sem.c  msgevents.c  shm.c  sync.c  timemath.c
ogle/ctrl/: .cvsignore  Makefile  Makefile.am  Makefile.in  ctrl.c
ogle/doc/: yuv2rgb.txt
ogle/doc/man/: .cvsignore  Makefile.am  ogle.1.in  oglerc.5.in
ogle/dvd_cli/: .cvsignore  Makefile.am  bindings.c  bindings.h  interpret_config.c  main.c  xsniffer.c  xsniffer.h
ogle/extras/: msgqdump.c  timing.c
ogle/include/: Makefile.am  common.h  debug_print.h  dvd.h  dvdcontrol.h  dvdevents.h  dvdinfo.h  endian.h  ip_sem.h  mpeg.h  msg.c  msgevents.h  msgtypes.h  ogle_endian.h  queue.h  shm.h  sync.h  timemath.h
ogle/libao/: Makefile.am  audio_out.c  audio_out.h  audio_out_float.c  audio_out_null.c  audio_out_oss.c  audio_out_solaris.c
ogle/libogleao/: Makefile.am  alsa_audio.c  null_audio.c  obsd_audio.c  ogle_ao.c  ogle_ao.h  oss_audio.c  solaris_audio.c
ogle/mpeg2_program/: .cvsignore  Makefile  Makefile.am  Makefile.in  play_pes.c  programstream.c  programstream.h
ogle/mpeg2_video/: .cvsignore  AUTHORS  Makefile  Makefile.am  Makefile.in  altivec_mlib.c  c_getbits.c  c_getbits.h  c_mlib.c  c_mlib.h  ctrl_test.c  darwin_altivec_mlib.c  display.c  display.h  mmx.h  mmx_idct.S  mmx_mlib.c  mmx_mlib.h  new_table.h  screenshot.c  screenshot.h  shutup.c  spu_mixer.c  spu_mixer.h  video_motion.c  video_mpeg1.c  video_mpeg2.c  video_output.c  video_output.h  video_output_ffb.c  video_output_mga.c  video_output_parse_config.c  video_output_parse_config.h  video_output_x11.c  video_output_xil.c  video_scale.c  video_stream.c  video_stream.h  video_tables.c  video_tables.h  (+10 more)
ogle/mpeg_audio/: .cvsignore  Makefile  Makefile.am  Makefile.in  mpg123_wrap.c
ogle/ogle/: .cvsignore  Makefile.am  dvd.h  dvdbookmarks.c  dvdbookmarks.h  dvdcontrol.c  dvdcontrol.h  dvdevents.h  msgevents.c  msgevents.h  ogle.1
ogle/scripts/: .cvsignore  Makefile.am  ogle  ogle.in
ogle/subpicture/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  TODO  extract_subtitles.c  spu_decode.c  spu_wrap.c  subpicture.c  subt2xpm.c
ogle/ui/: .cvsignore  Makefile  Makefile.am  Makefile.in  ui.c
ogle/vmg/: .cvsignore  BUGS  IFO_STRUCTURE  INSTRUCTIONS  Makefile  Makefile.am  Makefile.in  TODO  com.c  decoder.c  decoder.h  dump.c  ifo.c  ifo.h  ifo_dump.c  ifo_print.c  ifo_print.h  ifo_read.c  ifo_read.h  interpret_config.c  nav.c  nav.h  nav_print.c  nav_print.h  nav_read.c  nav_read.h  print_ifo_vm.c  vm.c  vm.h  vm_serialize.c  vmcmd.c  vmcmd.h  vmg.c  vmg_dump.c  vobdump.c
ogle_gui/: .cvsignore  INSTALL  Makefile.am  acconfig.h  autogen.sh  config.h.in  configure.in  ogle.glade  ogle_gui.glade  ogle_gui.spec
ogle_gui/doc/: Makefile.am  Makefile.in
ogle_gui/doc/C/: .cvsignore  Makefile  Makefile.am  Makefile.in  user-guide.sgml
ogle_gui/intl/: .cvsignore
ogle_gui/m4/: gettext.m4
ogle_gui/pixmaps/: .cvsignore  Makefile.am  enter.xpm  fastforward.xpm  go_up.xpm  menus.xpm  ogle.xpm  ogle_gui.glade  ogle_gui.glade2  preferences.glade  rewind.xpm  skip_backwards.xpm  skip_forwards.xpm  stock_down_arrow.xpm  stock_first.xpm  stock_last.xpm  stock_left_arrow.xpm  stock_pause.xpm  stock_right_arrow.xpm  stock_stop.xpm  stock_up_arrow.xpm  stock_volume.xpm  subpicture.xpm
ogle_gui/po/: .cvsignore  ChangeLog  Makefile.in.in  POTFILES.in  da.po  de.po  fr.po  it.po  nb.po  nl.po  ogle.pot  pt.po  sv.po
ogle_gui/src/: .cvsignore  Makefile.am  actions.c  actions.h  angle.c  angle.h  audio.c  audio.h  bindings.c  bindings.h  callbacks.c  callbacks.h  debug_print.h  fileselector.c  fileselector.h  interface.c  interface.h  interpret_config.c  interpret_config.h  language.c  language.h  main.c  menu.c  menu.h  my_glade.c  my_glade.h  myintl.h  ptt.c  ptt.h  subpicture.c  subpicture.h  support.c  xsniffer.c  xsniffer.h
oglespecs/: a52dec.spec  libcss.spec  libdvdcss.spec  libdvdread.spec  ogle.spec  ogle_gui.spec
xvattr/: AUTHORS  INSTALL  Makefile  Makefile.am  NEWS  autogen.sh  configure.in  gxvattr.c  xvattr.c  xvattr.pod.in
